samples/_failures_safe/1761244997_dbb2e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e317627.c: In function ‘print_token’:
./samples/SAFE/__tmp_8e317627.c:153:11: error: expected ‘;’ at end of input
  153 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_8e317627.c:153:5: error: expected declaration or statement at end of input
  153 |     printf
      |     ^~~~~~
